# JASM

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  JASMConfig.hpp.in  LICENSE  README.md  TESTS.md  TODO.md  build.ps1  build.sh  callgrind.out.6217  test.jasm  test.ps1  test.sh  testrun.sh
asm/: fnsym.jasm  lib.jasm  lib.sc  macro.jmf  test.jasm  test2.jasm
docs/: BUILD.md  DOCUMENTATION.md  assemblyInfo.md  assemblyInfo.txt  concept.jasm  defines.md  defines.txt  executableFormat.md  executableFormat.txt  instructions.txt  libraryFormat.md  libraryFormat.txt  objectFileFormat.txt  registers.txt
include/: JASMConfig.hpp  JASMConfig.hpp.in  assemblycontext.hpp  jasm.hpp  main.hpp  system.hpp
include/assembler/: all.hpp  assembler.hpp  instructions.hpp  modeflags.hpp
include/assembler/byteassembler/: assembler.hpp  instructions.hpp  modeflags.hpp
include/bytemode/assembler/: assembler.hpp  instructions.hpp  modeflags.hpp
include/bytemode/disassembler/: disassembler.hpp  instructions.hpp
include/bytemode/linker/: linker.hpp
include/extensions/: serialization.hpp  streamextensions.hpp  stringextensions.hpp  syntaxextensions.hpp  system.hpp
include/test/: test.hpp
include/utilities/: serialization.hpp  streamextensions.hpp  stringextensions.hpp  system.hpp
lib/: CMakeLists.txt
src/: CMakeLists.txt  assemblycontext.cpp  jasm.cpp  main.cpp
src/assembler/: CMakeLists.txt  assembler.cpp  instructions.cpp  modeflags.cpp
src/assembler/byteassembler/: CMakeLists.txt  assembler.cpp  instructions.cpp  modeflags.cpp
src/bytemode/: CMakeLists.txt
src/bytemode/assembler/: CMakeLists.txt  assembler.cpp  instructions.cpp  modeflags.cpp
src/bytemode/disassembler/: CMakeLists.txt  disassembler.cpp  instructions.cpp
src/bytemode/linker/: CMakeLists.txt  linker.cpp
src/core/: CMakeLists.txt  assemblycontext.cpp  jasm.cpp  system.cpp
src/extensions/: CMakeLists.txt  serialization.cpp  streamextensions.cpp  stringextensions.cpp  system.cpp
src/linker/: CMakeLists.txt
src/utilities/: CMakeLists.txt  streamextensions.cpp  stringextensions.cpp  system.cpp
tests/: CMakeLists.txt  asmcontext.cpp  assemblycontext.cpp  extensions.cpp  system.cpp  test.hpp
tests/assembler/: assembler.cpp  instructions.cpp  modeflags.cpp
tests/assembler/byteasm/: assembler.cpp  instructions.cpp  modeflags.cpp
tests/bytemode/assembler/: assembler.cpp  instructions.cpp  modeflags.cpp
tests/extensions/: serialization.cpp  stream.cpp  string.cpp  system.cpp
